[Java] Introduce coverage report with jacoco