@@ -37,6 +37,7 @@
 		<module>jeeintegration</module>
 		<module>messaging</module>
 		<module>integration-tests</module>
+		<module>coverage</module>
 	</modules>
 	<profiles>
 		<profile>
@@ -126,6 +127,43 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<phase>initialize</phase>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+						<configuration>
+							<destFile>${project.build.directory}/jacoco/execution-data</destFile>
+							<propertyName>surefireArgs</propertyName>
+							<skip>${skipTests}</skip>
+						</configuration>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<dataFile>${project.build.directory}/jacoco/execution-data</dataFile>
+							<outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
+							<skip>${skipTests}</skip>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration combine.children="override">
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m ${surefireArgs}</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
